--- a/src/renderer/src/views/AnalyzingView.module.css
+++ b/src/renderer/src/views/AnalyzingView.module.css
@@ -35,7 +35,7 @@
 .thumb img {
   width: 100%;
   height: 100%;
-  object-fit: cover;
+  object-fit: contain;
   display: block;
 }
 
